--- a/css/style.css
+++ b/css/style.css
@@ -991,7 +991,7 @@ textarea {
 }
 
 .mobilMenu {
-  display: none;
+  display: none !important;
 }
 
 @media (max-width: 1400px) {
@@ -1120,6 +1120,11 @@ textarea {
   }
 }
 @media (max-width: 992px) {
+  .mobilMenu {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
   .transformStoreCarts {
     margin-top: 45px;
   }
